# locate-android

./: .gitignore  README.md  build.gradle  settings.gradle
android-sampling/: .gitignore  gradle.properties  settings.gradle
libs/feifanlocate/locatelib/: CMakeLists.txt  build.gradle
libs/feifanlocate/locatelib/src/locate-lib-raw/app/: build.gradle  proguard-rules.pro
libs/feifanlocate/locatelib/src/locate-lib-raw/app/src/main/: AndroidManifest.xml
libs/feifanlocate/locatelib/src/locate-lib-raw/app/src/main/res/layout/: activity_main.xml  content_main.xml
libs/feifanlocate/locatelib/src/locate-lib-raw/app/src/main/res/menu/: menu_main.xml
libs/feifanlocate/locatelib/src/locate-lib-raw/app/src/main/res/values/: strings.xml
libs/feifanlocate/locatelib/src/locate-lib-raw/src/: .gitignore
libs/feifanlocate/locatelib/src/main/assets/: 1100079.json  locate.key
libs/feifanlocate/locatelib/src/main/cpp/: .gitignore  euclid-distance-estimator.cpp
libs/feifanlocate/locatelib/src/main/cpp/include/: euclid-distance-estimator.h  position-estimator.h
libs/feifanlocate/locatelib/src/main/java/com/feifan/locatelib/: LocatorBase.java  PlazaDetectorService.java
libs/feifanlocate/locatelib/src/main/java/com/feifan/locatelib/algorithm/: ILocationFinder.java  ILocationInspector.java  LocationFinderFactory.java
libs/feifanlocate/locatelib/src/main/java/com/feifan/locatelib/cache/: BeaconStore.java  CacheState.java  FingerprintStore.java  StoreUtils.java
libs/feifanlocate/locatelib/src/main/java/com/feifan/locatelib/data/: DataProcessor.java  TreeNode.java
(+945 files in other folders)
